@@ -1,5 +1,5 @@
 README:  Tcl
-    This is the Tcl 8.5.7 source distribution.
+    This is the Tcl 8.5.8 source distribution.
     Tcl/Tk is also available through NetCVS:
 	http://tcl.sourceforge.net/
     You can get any source release of Tcl from the file distributions
